--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "goit-react-hw-03-image-finder",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://erpua.github.io/goit-react-hw-03-image-finder",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
@@ -15,7 +16,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -36,11 +39,13 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^3.1.0",
     "husky": "^4.3.7",
     "lint-staged": "^9.4.2",
     "modern-normalize": "^1.0.0",
     "prettier": "^2.2.1",
     "prop-types": "^15.7.2",
+    "react-loader-spinner": "^4.0.0",
     "sass": "^1.32.8"
   }
 }
